--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "@emotion/core": "^10.0.7",
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "express-http-proxy": "^1.5.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.1",
     "react-router-config": "^4.4.0-beta.6",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^4.4.0-beta.6",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "serialize-javascript": "^1.6.1"
