--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
     "jsxobj": "^1.1.0",
+    "nodemon": "^1.18.10",
     "pm2": "^3.3.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
@@ -41,6 +42,7 @@
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "express-http-proxy": "^1.5.1",
+    "lodash": "^4.17.11",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-helmet": "^5.2.0",
@@ -48,6 +50,7 @@
     "react-router-config": "1.0.0-beta.4",
     "react-router-dom": "4.2.2",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "serialize-javascript": "^1.6.1"
   }
