--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/polyfill": "^7.2.5",
     "@emotion/core": "^10.0.7",
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-http-proxy": "^1.5.1",
     "lodash": "^4.17.11",
